--- a/Détection_de_Pose_et_Visage.ipynb
+++ b/Détection_de_Pose_et_Visage.ipynb
@@ -30,9 +30,7 @@
         "La détection de pose est un domaine d'étude actif dans le domaine de la vision par ordinateur.\n",
         "Dans ce test nous allons couvrir l'une de ces applications de détection et d'estimation de pose à l'aide de l'apprentissage automatique et de certaines des bibliothèques très utiles en python(OpenCV,Mediapipe).\n",
         "\n",
-        "L'estimation de pose est une technique de vision par ordinateur pour suivre les mouvements d'une personne ou d'un objet. Ceci est généralement effectué en trouvant l'emplacement des points clés pour les objets donnés.\n",
-        "\n",
-        "1- Ecrire un programme python qui va générer une vidéo de sortie et produit les informations sous forme de tableau dans un fichier excel"
+        "L'estimation de pose est une technique de vision par ordinateur pour suivre les mouvements d'une personne ou d'un objet. Ceci est généralement effectué en trouvant l'emplacement des points clés pour les objets donnés."
       ]
     },
     {
